Fixed the footer to the left of the page to remove the whitespace that didn't belong there.

--- a/styles/style.css
+++ b/styles/style.css
@@ -156,9 +156,9 @@ ul {
     display: block;
     position: fixed;
     bottom: 0;
+    left: 0;
     width: 100%;
     height: 2.1875rem;
-    margin: 0 auto;
     background: #f2f2f2;
     line-height: 2.5rem;
     border: 0.0625rem solid #e4e4e4;
